modified file sln

--- a/QuanLyCuaHang/CTHD_DTO/DTO.csproj
+++ b/QuanLyCuaHang/CTHD_DTO/DTO.csproj
@@ -42,9 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChiTietHoaDon_DTO.cs" />
-    <Compile Include="HangHoa_DTO.cs" />
+    <Compile Include="SanPham_DTO.cs" />
     <Compile Include="HoaDon_DTO.cs" />
     <Compile Include="KhachHang_DTO.cs" />
+    <Compile Include="LoaiSanPham_DTO.cs" />
     <Compile Include="NhanVien_DTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
