--- a/QuanLyCuaHang/CTHD_DAL/DAL.csproj
+++ b/QuanLyCuaHang/CTHD_DAL/DAL.csproj
@@ -42,9 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChiTietHoaDon_DAL.cs" />
-    <Compile Include="HangHoa_DAL.cs" />
+    <Compile Include="SanPham_DAL.cs" />
     <Compile Include="HoaDon_DAL.cs" />
     <Compile Include="KhachHang_DAL.cs" />
+    <Compile Include="LoaiSanPham_DAL.cs" />
     <Compile Include="NhanVien_DAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLConnection_DAL.cs" />
