--- a/QuanLyCuaHang/HANGHOA_GUI/GUI.csproj
+++ b/QuanLyCuaHang/HANGHOA_GUI/GUI.csproj
@@ -70,6 +70,12 @@
     <Compile Include="fNHANVIEN.Designer.cs">
       <DependentUpon>fNHANVIEN.cs</DependentUpon>
     </Compile>
+    <Compile Include="fTHONGKE.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fTHONGKE.Designer.cs">
+      <DependentUpon>fTHONGKE.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="fHANGHOA.resx">
@@ -83,6 +89,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="fNHANVIEN.resx">
       <DependentUpon>fNHANVIEN.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fTHONGKE.resx">
+      <DependentUpon>fTHONGKE.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
